Moved ImapClient connection to separate class

--- a/src/Mailer.Api/appsettings.json
+++ b/src/Mailer.Api/appsettings.json
@@ -8,7 +8,7 @@
   "EmailConfig":{
     "ImapServerAddress": "imap.gmail.com",
     "ImapPort": 993,
-    "UserName": "",
-    "Password": ""
+    "UserName": "mailermailer95@gmail.com",
+    "Password": "P@ssw0rd2"
   }
 }
