Add Smtp service and Send message option

--- a/src/Mailer.Api/appsettings.json
+++ b/src/Mailer.Api/appsettings.json
@@ -9,6 +9,8 @@
     "ImapServerAddress": "imap.gmail.com",
     "ImapPort": 993,
     "UserName": "mailermailer95@gmail.com",
-    "Password": "P@ssw0rd2"
+    "Password": "P@ssw0rd2",
+    "SmtpServerAddress": "smtp.gmail.com",
+    "SmtpPort": 465
   }
 }
