--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,34 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:5000",
-            "webRoot": "${workspaceRoot}"
+            "preLaunchTask": "build",
+            "program": "${workspaceRoot}/src/Mailer.Api/bin/Debug/netcoreapp2.0/Mailer.Api.dll",
+            "args": [],
+            "cwd": "${workspaceRoot}/src/Mailer.Api/",
+            "stopAtEntry": false,
+            "launchBrowser": {
+                "enabled": true,
+                "args": "${auto-detect-url}",
+                "windows": {
+                    "command": "cmd.exe",
+                    "args": "/C start ${auto-detect-url}"
+                },
+                "osx": {
+                    "command": "open"
+                },
+                "linux": {
+                    "command": "xdg-open"
+                }
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceRoot}/src/Mailer.Api/Views"
+            }
         }
     ]
 }
